--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -8,6 +8,43 @@
   <title>Document</title>
 </head>
 <body>
+<div class="calculator">
 
+  <form class="calculator__display display">
+    <div class="display__tablo tablo">
+      <input class="tablo__operations" type="text" value="20x80x0,5">
+      <input class="tablo__result" type="number" value="800">
+    </div>
+    <div class="display__buttons">
+
+      <button class="btn c" type="button">C</button>
+      <button class="btn square-root" type="button">√</button>
+      <button class="btn percent" type="button">%</button>
+      <button class="btn division" type="button">/</button>
+
+      <button class="btn seven" type="button">7</button>
+      <button class="btn eight" type="button">8</button>
+      <button class="btn nine" type="button">9</button>
+      <button class="btn myltiply" type="button">×</button>
+
+      <button class="btn four" type="button">4</button>
+      <button class="btn five" type="button">5</button>
+      <button class="btn six" type="button">6</button>
+      <button class="btn minus" type="button">-</button>
+
+      <button class="btn one" type="button">1</button>
+      <button class="btn two" type="button">2</button>
+      <button class="btn three" type="button">3</button>
+      <button class="btn plus" type="button">+</button>
+
+      <button class="btn null-null" type="button">00</button>
+      <button class="btn null" type="button">0</button>
+      <button class="btn comma" type="button">,</button>
+      <button class="btn equal" type="submit">=</button>
+
+    </div>
+  </form>
+
+</div>
 </body>
 </html>
