added main functions

--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -3,7 +3,7 @@
   max-width: 616px;
   max-height: 876px;
   margin: 0 auto;
-  background: #faa6a6;
+  background: var(--wrapper-fon-color);
   backdrop-filter: blur(2px);
   border-radius: 18px;
 
