--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 
 html{
   --body-fon-color:rgba(255, 161, 161, 1);
+  --wrapper-fon-color:#faa6a6;
   --tablo-fon-color:#28518E;
   --calculator-fon-color: linear-gradient(#28518E, #3A77D1);
   --button-hover-color:#4b7bc1;
