--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
@@ -15,17 +14,17 @@
         (keydown.escape)="onKeyClear($event)"
   >
     <div class="display__tablo tablo" >
-      <input class="tablo__operations"  #video  type="text" [(ngModel)]="inputValue"  name="inputValue">
+      <input class="tablo__operations"  #video  type="text" [(ngModel)]="inputValue"  name="inputValue" autofocus>
       <input class="tablo__result" type="text" [(ngModel)]="outputValue" name="outputValue" readonly>
     </div>
-    <div class="display__buttons">
+    <div class="display__buttons" (keydown.9)="onKeyDownNumber($event)">
 
       <button class="btn c" type="button" (click)="clear()">C</button>
       <button class="btn square-root" type="button" (click) = "getOperations('√')">√</button>
       <button class="btn percent" type="button" (click) = "getOperations('%')">%</button>
       <button class="btn division" type="button" (click) = "getOperations('/')">/</button>
 
-      <button class="btn seven" type="button" (click) = "getOperations('7')">7</button>
+      <button class="btn seven" type="button" (keyup.7)="getOperations('7')" (click) = "getOperations('7')">7</button>
       <button class="btn eight" type="button" (click) = "getOperations('8')">8</button>
       <button class="btn nine" type="button" (click) = "getOperations('9')">9</button>
       <button class="btn myltiply" type="button" (click)="getOperations('*')">×</button>
