--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -10,19 +10,22 @@
   .display {
     padding: 16px 48px 44px 46px;
     max-width: 554px;
-    max-height: 800px;
+    height: 800px;
     background: var(--calculator-fon-color);
     box-shadow: 0px 82px 158px rgba(0, 0, 0, 0.35), 0px 24.7206px 47.6324px rgba(0, 0, 0, 0.228056), 0px 10.2677px 19.7841px rgba(0, 0, 0, 0.175), 0px 3.71362px 7.1555px rgba(0, 0, 0, 0.121944);
     border-radius: 18px;
 
     &__tablo {
       border-bottom: 1px solid var(--text-color);
-      padding:101px 0 18px 0;
+      padding: 101px 0 18px 0;
       background: transparent;
+      display: flex;
+      flex-direction: column;
+
 
       .tablo__operations {
         vertical-align: bottom;
-        width: 460px;
+        width: 100%;
         height: 32px;
         margin-bottom: 28px;
         background: transparent;
@@ -35,7 +38,7 @@
       }
 
       .tablo__result {
-        width: 460px;
+        width: 100%;
         height: 76px;
         background: transparent;
         color: var(--text-color);
@@ -58,9 +61,10 @@
         "null-null null comma equal";
       gap: 16px 20px;
 
+
       .btn {
-        width: 80px;
-        height: 80px;
+        max-width: 80px;
+        max-height: 80px;
         border: none;
         outline: none;
         border-radius: 50%;
@@ -89,5 +93,8 @@
       }
 
     }
+
   }
 }
+
+
