--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,4 +34,17 @@ input{
   outline-offset: 0;
 }
 
+@media (max-width: 430px) {
+  .calculator {
+    display: block;
+  }
+  .display {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+}
 
