--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@ input{
   outline-offset: 0;
 }
 
-@media (max-width: 430px) {
+@media (max-width: 700px) {
   .calculator {
     display: block;
   }
@@ -42,8 +42,8 @@ input{
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
   }
 
 }
